--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,7 +2,7 @@
 
    
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
       
     </style>
 
