--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,9 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    
     android:orientation="vertical"
     >
+    <LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/fragmentMainActivity"
+    android:orientation="vertical">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -17,7 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="#a000"
             android:orientation="vertical"
             android:padding="5dp" >
 
@@ -50,4 +55,5 @@
            
        </ListView>
 	</LinearLayout>
-</LinearLayout>
+	</LinearLayout>
+</FrameLayout>
