--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,22 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nanshan.xky_client.MainActivity" >
-
     
     <item
-        android:id="@+id/action_jiaoxue"
+        android:id="@+id/action_guanyu"
         android:orderInCategory="100"
-        android:title="@string/action_jiaoxue"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_jiaowu"
-        android:orderInCategory="100"
-        android:title="@string/action_jiaowu"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_student"
-        android:orderInCategory="100"
-        android:title="@string/action_student"
+        android:title="@string/action_guanyu"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_settings"
